--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 
 <app-header></app-header>
 
-<div class="container">
-  <div class="row">
-    <router-outlet></router-outlet>
-  </div>
+<div class="container" style="margin-top:15px">
+  <router-outlet></router-outlet>
 </div>
