--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,14 @@
-<div class="sticky-top">
-  <!--Navbar-->
-  <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark unique-color" [containerInside]="false">
+<!--Main Navigation-->
+<header class="intro-header">
 
+  <!--Navbar-->
+  <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark unique-color fixed-top scrolling-navbar">
     <!-- Navbar brand -->
     <mdb-navbar-brand>
-      <mdb-icon fas icon="heart" size="2x" class="amber-text"></mdb-icon>
-      <a class="navbar-brand amber-text" routerLink="/about">Rencontre.com</a>
+      <mdb-icon fas icon="heart" size="2x" class="amber-text animate__pulse animate__infinite animate__animated"></mdb-icon>
+      <a class="navbar-brand amber-text" [routerLink]="['']">Rencontre.com</a>
     </mdb-navbar-brand>
-
-    <!-- Collapsible content -->
     <links>
-
       <!-- Links -->
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
@@ -35,9 +33,7 @@
             <a class="dropdown-item waves-light" mdbWavesEffect href="#">Separated link</a>
           </div>
         </li>
-
       </ul>
-      <!-- Links -->
 
       <ul class="navbar-nav ml-auto nav-flex-icons" *ngIf="isAuth">
         <li class="nav-item">
@@ -46,20 +42,32 @@
 
         <li class="nav-item avatar dropdown" dropdown>
           <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-            <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-2.jpg" alt="" class="img-fluid rounded-circle z-depth-0"></a>
+            <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-2.jpg" alt="" class="img-fluid rounded-circle z-depth-0 w-25"></a>
           <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
             <a class="dropdown-item waves-light" mdbWavesEffect href="#">My account</a>
-            <a class="dropdown-item waves-light" mdbWavesEffect href="#">Log out</a>
+            <a class="dropdown-item waves-light" mdbWavesEffect (click)="onSignOut()">Log out</a>
           </div>
         </li>
       </ul>
 
+      <div class="btn-group" mdbDropdown>
+        <button type="button" mdbBtn color="primary" class="waves-light" mdbWavesEffect>Dropup</button>
+        <button type="button" mdbBtn color="primary" mdbDropdownToggle class="dropdown-toggle dropdown-toggle-split px-3 waves-light"
+                mdbWavesEffect></button>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="#">Something else here</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Separated link</a>
+        </div>
+      </div>
+
       <button style="margin:10px" mat-raised-button color="basic" routerLink="auth/signin" *ngIf="!isAuth">Se connecter</button>
-      <button mat-flat-button color="warn" routerLink="auth/signup" *ngIf="!isAuth">Inscrivez-vous!</button>
+      <button mat-flat-button color="warn" routerLink="/auth/signup" *ngIf="!isAuth">Inscrivez-vous!</button>
 
     </links>
-    <!-- Collapsible content -->
-
   </mdb-navbar>
-  <!--/.Navbar-->
-</div>
+
+</header>
+<!--Main Navigation-->
