--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -44,24 +44,12 @@
           <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
             <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-2.jpg" alt="" class="img-fluid rounded-circle z-depth-0 w-25"></a>
           <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
-            <a class="dropdown-item waves-light" mdbWavesEffect href="#">My account</a>
-            <a class="dropdown-item waves-light" mdbWavesEffect (click)="onSignOut()">Log out</a>
+            <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/profil">Mon profile</a>
+            <div class="divider dropdown-divider"></div>
+            <a class="dropdown-item waves-light" mdbWavesEffect (click)="onSignOut()">Déconnexion</a>
           </div>
         </li>
       </ul>
-
-      <div class="btn-group" mdbDropdown>
-        <button type="button" mdbBtn color="primary" class="waves-light" mdbWavesEffect>Dropup</button>
-        <button type="button" mdbBtn color="primary" mdbDropdownToggle class="dropdown-toggle dropdown-toggle-split px-3 waves-light"
-                mdbWavesEffect></button>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Separated link</a>
-        </div>
-      </div>
 
       <button style="margin:10px" mat-raised-button color="basic" routerLink="auth/signin" *ngIf="!isAuth">Se connecter</button>
       <button mat-flat-button color="warn" routerLink="/auth/signup" *ngIf="!isAuth">Inscrivez-vous!</button>
