--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <app-header></app-header>
-
+<notifier-container></notifier-container>
 <div class="container" style="margin-top:90px">
   <router-outlet></router-outlet>
 </div>
