--- a/src/app/gestion-profile/informations/informations.component.html
+++ b/src/app/gestion-profile/informations/informations.component.html
@@ -15,26 +15,34 @@
 
                     <!-- Sexe -->
                     <select class="browser-default custom-select mb-4" formControlName="sexe">
-                        <option value="none" selected disabled>Sexe</option>
+                        <option value="" selected disabled>Sexe</option>
                         <option value="M">Masculin</option>
                         <option value="F">Féminin</option>
                     </select>
 
-                    <!-- DN -->
-                    <input mdbInput type="text" id="dn" class="form-control mb-4" placeholder="Date de naissance" formControlName="dn">
-
                     <!-- OS -->
                     <select class="browser-default custom-select mb-4" formControlName="os">
-                        <option value="none" selected disabled>Orientation Sexuelle</option>
+                        <option value="" selected disabled>Orientation Sexuelle</option>
                         <option value="1">Hétérosexuel</option>
                         <option value="2">Homosexuel</option>
                         <option value="3">Bisexuel</option>
                     </select>
 
+                    <!-- DN -->
+                    <input mdbInput mdInput name="dn" theme="dp-material" placeholder="Date de naissance" id="dn" class="form-control mb-4" formControlName="dn" [dpDayPicker]="config" />
+
                     <!-- Message -->
-                    <div class="form-group">
-                        <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" placeholder="A propos de moi"></textarea>
+                    <div class="form-group" style="width: 100%;">
+                        <textarea mdbInput class="form-control rounded-0" id="apropro" rows="3" formControlName="apropro" placeholder="A propos de moi"></textarea>
                     </div>
+
+                    <input-file
+                      [(ngModel)]="file"
+                      placeholder="Photo de profil"
+                      formControlName="image"
+                      fileAccept="image/*"
+                      fileLimit="1">
+                  </input-file>
 
                 </div>
             </div>
@@ -43,109 +51,23 @@
                     <label>Je cherche</label>
                     <!-- sexe -->
                     <select class="browser-default custom-select mb-4" formControlName="sexe_cherche">
-                      <option value="none" selected disabled>Sexe</option>
+                      <option value="" selected disabled>Sexe</option>
                       <option value="M">Un homme</option>
                       <option value="F">Une femme</option>
                     </select>
                 </div>
+
+                <div class="custom-slider row">
+                  <label>Agé(e) de </label> <mdb-badge style="margin: 6px 10px 10px 10px;" color="cyan">{{ minValue }} ans </mdb-badge> à <mdb-badge style="margin: 6px 10px 10px 10px;" color="cyan">{{ maxValue }} ans </mdb-badge>
+                  <ng5-slider [(value)]="minValue" [(highValue)]="maxValue" [options]="options"></ng5-slider>
+                </div>
+
             </div>
          </div>
          <!-- Send button -->
-         <button mdbBtn color="info" block="true" type="submit">Send</button>
+         <p *ngIf="errorMessage" class="text-danger">{{ errorMessage }}</p>
+
+         <button mdbBtn color="info" block="true" class="my-4" type="submit" [disabled]="signUpForm.invalid">Valider</button>
     </form>
     <!-- Default form contact -->
 </div>
-
-
-
-
-
-<div class="container">
-    <div class="row">
-      <div class="col-sm">
-        <!-- Default form register -->
-        <form class="text-center border border-light p-5" [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
-
-          <p class="h4 mb-4">Inscription</p>
-
-          <div class="form-row mb-4">
-            <div class="col">
-              <!-- First name -->
-              <div class="md-form">
-                <input mdbInput type="text" id="nom" class="form-control" formControlName="nom">
-                <label for="nom">Nom *</label>
-                <mdb-error *ngIf="signUpForm.get('nom').invalid && (signUpForm.get('nom').dirty || signUpForm.get('nom').touched)">Votre nom est vide</mdb-error>
-              </div>
-            </div>
-            <div class="col">
-              <!-- Last name -->
-              <div class="md-form">
-                <input mdbInput type="text" id="prenom" class="form-control" formControlName="prenom">
-                <label for="prenom">Prénom</label>
-                <mdb-error *ngIf="signUpForm.get('prenom').invalid && (signUpForm.get('prenom').dirty || signUpForm.get('prenom').touched)">Votre prénom est vide</mdb-error>
-              </div>
-            </div>
-          </div>
-
-          <!-- E-mail -->
-          <div class="md-form mb-4">
-            <input mdbInput name="email" type="email" id="email" class="form-control"
-                   formControlName="email">
-            <label for="email">Email *</label>
-            <mdb-error *ngIf="signUpForm.get('email').invalid && signUpForm.get('email').value != '' && (signUpForm.get('email').dirty || signUpForm.get('email').touched)">Votre Email est invalide</mdb-error>
-            <mdb-error *ngIf="signUpForm.get('email').value == '' && (signUpForm.get('email').dirty || signUpForm.get('email').touched)">Votre Email est vide</mdb-error>
-          </div>
-
-          <!-- Password -->
-          <div class="md-form">
-            <input mdbInput type="password" id="password" class="form-control" formControlName="password">
-            <label for="password">Mot de passe</label>
-            <mdb-error *ngIf="signUpForm.get('password').invalid && (signUpForm.get('password').dirty || signUpForm.get('password').touched)">Votre mot de passe doit avoir au moins 8 caractères</mdb-error>
-          </div>
-
-          <div class="md-form">
-            <input mdbInput type="password" id="password_confirm" class="form-control" formControlName="password_confirm">
-            <label for="password_confirm">Confirmer Mot de passe</label>
-            <mdb-error *ngIf="signUpForm.get('password_confirm').invalid && (signUpForm.get('password_confirm').dirty || signUpForm.get('password_confirm').touched)">Vos mots de passe ne sont pas identiques</mdb-error>
-          </div>
-
-          <div class="row">
-            <div class="mx-auto d-flex justify-content-center">
-              <mdb-checkbox [default]="true" formControlName="acceptTerms">
-                J'accepte les CGU et la <a href="" target="_blank">Déclaration de protection des données</a> , et certifie être majeur(e).
-                <mdb-error  class="mt-2" style="text-align: center" *ngIf="signUpForm.get('acceptTerms').invalid && (signUpForm.get('acceptTerms').dirty || signUpForm.get('acceptTerms').touched)">Vous devez accepter les conditions d'utilisation de l'application</mdb-error>
-              </mdb-checkbox>
-            </div>
-          </div>
-
-          <p *ngIf="errorMessage" class="text-danger">{{ errorMessage }}</p>
-
-          <!-- Sign up button -->
-          <button mdbBtn color="info" block="true" class="my-4" type="submit" [disabled]="signUpForm.invalid">S'inscrire</button>
-
-          <!-- Social register -->
-          <p>Ou s'inscrire avec:</p>
-
-          <a type="button" class="light-blue-text mx-2">
-            <mdb-icon fab icon="facebook"></mdb-icon>
-          </a>
-          <a type="button" class="light-blue-text mx-2">
-            <mdb-icon fab icon="twitter"></mdb-icon>
-          </a>
-          <a type="button" class="light-blue-text mx-2">
-            <mdb-icon fab icon="linkedin"></mdb-icon>
-          </a>
-          <a type="button" class="light-blue-text mx-2">
-            <mdb-icon fab icon="google"></mdb-icon>
-          </a>
-
-          <hr>
-
-        </form>
-        <!-- Default form register -->
-      </div>
-      <div class="col-sm">
-        <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(137).jpg" class="img-fluid z-depth-1" alt="Responsive image">
-      </div>
-    </div>
-  </div>
