--- a/src/app/gestion-profile/gestion-profile.component.html
+++ b/src/app/gestion-profile/gestion-profile.component.html
@@ -11,20 +11,20 @@
           <!-- Card img -->
           <div class="col-xl-10 col-md-4 mb-3 text-center" style="display: inline-grid;;margin-top: -90px;">
 
-            <img src="https://mdbootstrap.com/img/Photos/Avatars/img(31).jpg" class="img-fluid z-depth-1 rounded-circle"
+            <img [src]="base_url+url_image" class="img-fluid z-depth-1 rounded-circle"
               alt="Responsive image">
-        
+
           </div>
           <!--Title-->
           <mdb-card-title>
-            <h4>THomas Roger</h4>
+            <h4>{{ this.user.infosPersos.nom }} {{ this.user.infosPersos.prenom }}</h4>
           </mdb-card-title>
-    
+
           <!--Text-->
-          <mdb-card-text> 
-            Un texte su moi même
+          <mdb-card-text>
+            {{ this.user.infosPersos.apropro }}
           </mdb-card-text>
-    
+
           <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a>
         </mdb-card-body>
 
@@ -34,7 +34,7 @@
 
     <button mdbBtn type="button" gradient="blue" class="mt-3" rounded="true" mdbWavesEffect style="width: 95%;">Personnalité</button>
 
-    <button mdbBtn type="button" gradient="blue" class="mt-3" rounded="true" mdbWavesEffect style="width: 95%;">Physique</button>
+    <button [routerLink]="['physique']" mdbBtn type="button" gradient="blue" class="mt-3" rounded="true" mdbWavesEffect style="width: 95%;">Physique</button>
 
     <button mdbBtn type="button" gradient="blue" class="mt-3" rounded="true" mdbWavesEffect style="width: 95%;">Style de vie</button>
   </div>
