--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -45,7 +45,7 @@
 
                 <li class="nav-item avatar dropdown" dropdown>
                     <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-                        <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-2.jpg" alt="" class="img-fluid rounded-circle z-depth-0 w-25"></a>
+                        <img [src]="base_url+url_image" alt="" class="img-fluid rounded-circle z-depth-0" style="width: 25px !important; height: 25px;"></a>
                     <div *dropdownMenu class="dropdown-menu dropdown-menu-right dropdown dropdown-primary" role="menu">
                         <a class="dropdown-item waves-light" mdbWavesEffect routerLink="/profil">Mon profile</a>
                         <div class="divider dropdown-divider"></div>
