--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,26 +15,10 @@
                     <a class="nav-link waves-light" mdbWavesEffect routerLink="/">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link waves-light" mdbWavesEffect>Features</a>
-                </li>
+                  <a class="nav-link waves-light" mdbWavesEffect routerLink="/recherche">Chercher </a>
+              </li>
                 <li class="nav-item">
-                    <a class="nav-link waves-light" mdbWavesEffect routerLink="/about">Abouts</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link waves-light" mdbWavesEffect routerLink="/search-partner">Find partner  </a>
-                </li>
-
-                <!-- Dropdown -->
-                <li class="nav-item dropdown" dropdown>
-                    <a dropdownToggle type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
-            Basic dropdown<span class="caret"></span></a>
-                    <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-                        <a class="dropdown-item waves-light" mdbWavesEffect href="#">Action</a>
-                        <a class="dropdown-item waves-light" mdbWavesEffect href="#">Another action</a>
-                        <a class="dropdown-item waves-light" mdbWavesEffect href="#">Something else here</a>
-                        <div class="divider dropdown-divider"></div>
-                        <a class="dropdown-item waves-light" mdbWavesEffect href="#">Separated link</a>
-                    </div>
+                    <a class="nav-link waves-light" mdbWavesEffect routerLink="/about">A propos</a>
                 </li>
             </ul>
 
