--- a/src/app/index-view/index-view.component.html
+++ b/src/app/index-view/index-view.component.html
@@ -14,20 +14,116 @@
             <strong>Le site qui vous assemble et qui vous ressemble</strong></h5>
           <a mdbBtn color="white" outline="true" class="wow animate__animated animate__fadeInDown waves-light" data-wow-delay="1.7s"
              mdbWavesEffect>portfolio</a>
-          <a mdbBtn color="white" outline="true" class="wow animate__animated animate__fadeInDown waves-light" data-wow-delay="1.7s"
-             mdbWavesEffect>About me</a>
+          <a mdbBtn color="white" routerLink="/about" outline="true" class="wow animate__animated animate__fadeInDown waves-light" data-wow-delay="1.7s"
+             mdbWavesEffect>About</a>
          </div>
       </div>
     </div>
   </div>
 </header>
 
-<section class="section section-a">
-  <div class="container">
-    <h1>Section A</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium ad alias aliquid atque autem beatae deleniti deserunt distinctio doloribus eaque eligendi enim expedita facere fuga fugiat fugit hic illo impedit ipsam iure iusto laboriosam laborum, magni minima modi nam nemo nobis odio porro quas saepe sapiente soluta tempora voluptatum.</p>
+<!-- Section: Blog v.2 -->
+<section class="text-center my-5">
+
+  <!-- Section heading -->
+  <h2 class="h1-responsive font-weight-bold my-5">Recent posts</h2>
+  <!-- Section description -->
+  <p class="dark-grey-text w-responsive mx-auto mb-5">Duis aute irure dolor in reprehenderit in voluptate velit
+    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+    qui officia deserunt mollit anim id est laborum.</p>
+
+  <!-- Grid row -->
+  <div class="row">
+
+    <!-- Grid column -->
+    <div class="col-lg-4 col-md-12 mb-lg-0 mb-4">
+
+      <!-- Featured image -->
+      <div class="view overlay rounded z-depth-2 mb-4 waves-light" mdbWavesEffect>
+        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/81.jpg" alt="Sample image">
+        <a>
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+
+      <!-- Category -->
+      <a href="#!" class="pink-text">
+        <h6 class="font-weight-bold mb-3"><mdb-icon far icon="map" class="pr-2"></mdb-icon>Adventure</h6>
+      </a>
+      <!-- Post title -->
+      <h4 class="font-weight-bold mb-3"><strong>Title of the news</strong></h4>
+      <!-- Post data -->
+      <p>by <a class="font-weight-bold">Billy Forester</a>, 15/07/2018</p>
+      <!-- Excerpt -->
+      <p class="dark-grey-text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit
+        quo minus id quod maxime placeat facere possimus voluptas.</p>
+      <!-- Read more button -->
+      <a mdbBtn color="pink" rounded="true" mdbWavesEffect>Read more</a>
+
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
+
+      <!-- Featured image -->
+      <div class="view overlay rounded z-depth-2 mb-4 waves-light" mdbWavesEffect>
+        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/43.jpg" alt="Sample image">
+        <a>
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+
+      <!-- Category -->
+      <a href="#!" class="deep-orange-text">
+        <h6 class="font-weight-bold mb-3"><mdb-icon fas icon="graduation-cap" class="pr-2"></mdb-icon>Education</h6>
+      </a>
+      <!-- Post title -->
+      <h4 class="font-weight-bold mb-3"><strong>Title of the news</strong></h4>
+      <!-- Post data -->
+      <p>by <a class="font-weight-bold">Billy Forester</a>, 13/07/2018</p>
+      <!-- Excerpt -->
+      <p class="dark-grey-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+        voluptatum deleniti atque corrupti quos dolores.</p>
+      <!-- Read more button -->
+      <a mdbBtn color="deep-orange" rounded="true" mdbWavesEffect>Read more</a>
+
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-lg-4 col-md-6 mb-0">
+
+      <!-- Featured image -->
+      <div class="view overlay rounded z-depth-2 mb-4 waves-light" mdbWavesEffect>
+        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/images/13.jpg" alt="Sample image">
+        <a>
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+
+      <!-- Category -->
+      <a href="#!" class="blue-text">
+        <h6 class="font-weight-bold mb-3"><mdb-icon fas icon="fire" class="pr-2"></mdb-icon>Culture</h6>
+      </a>
+      <!-- Post title -->
+      <h4 class="font-weight-bold mb-3"><strong>Title of the news</strong></h4>
+      <!-- Post data -->
+      <p>by <a class="font-weight-bold">Billy Forester</a>, 11/07/2018</p>
+      <!-- Excerpt -->
+      <p class="dark-grey-text">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed
+        quia consequuntur magni dolores eos qui ratione.</p>
+      <!-- Read more button -->
+      <a mdbBtn color="info" rounded="true" mdbWavesEffect>Read more</a>
+
+    </div>
+    <!-- Grid column -->
+
   </div>
+  <!-- Grid row -->
+
 </section>
+<!-- Section: Blog v.2 -->
 
 <section class="section section-b animated bounce infinite">
   <div class="container">
@@ -36,5 +132,143 @@
     <img class="animate__bounce animate__infinite animate__animated" src="https://mdbootstrap.com/img/logo/mdb-transparent.png">
   </div>
 </section>
+
+<!-- Section: Blog v.1 -->
+<section class="my-5">
+
+  <!-- Section heading -->
+  <h2 class="h1-responsive font-weight-bold text-center my-5">Recent posts</h2>
+  <!-- Section description -->
+  <p class="text-center w-responsive mx-auto mb-5">Duis aute irure dolor in reprehenderit in voluptate velit
+    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+    qui officia deserunt mollit anim id est laborum.</p>
+
+  <!-- Grid row -->
+  <div class="row">
+
+    <!-- Grid column -->
+    <div class="col-lg-5">
+
+      <!-- Featured image -->
+      <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4 waves-light" mdbWavesEffect>
+        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/img%20(27).jpg" alt="Sample image">
+        <a>
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-lg-7">
+
+      <!-- Category -->
+      <a href="#!" class="green-text">
+        <h6 class="font-weight-bold mb-3"><mdb-icon fas icon="utensils" class="pr-2"></mdb-icon>Food</h6>
+      </a>
+      <!-- Post title -->
+      <h3 class="font-weight-bold mb-3"><strong>Title of the news</strong></h3>
+      <!-- Excerpt -->
+      <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
+        placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus et aut officiis debitis.</p>
+      <!-- Post data -->
+      <p>by <a><strong>Carine Fox</strong></a>, 19/08/2018</p>
+      <!-- Read more button -->
+      <a mdbBtn color="success" mdbWavesEffect>Read more</a>
+
+    </div>
+    <!-- Grid column -->
+
+  </div>
+  <!-- Grid row -->
+
+  <hr class="my-5">
+
+  <!-- Grid row -->
+  <div class="row">
+
+    <!-- Grid column -->
+    <div class="col-lg-7">
+
+      <!-- Category -->
+      <a href="#!" class="pink-text">
+        <h6 class="font-weight-bold mb-3"><mdb-icon far icon="image" class="pr-2"></mdb-icon>Lifestyle</h6>
+      </a>
+      <!-- Post title -->
+      <h3 class="font-weight-bold mb-3"><strong>Title of the news</strong></h3>
+      <!-- Excerpt -->
+      <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+        deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
+        provident.</p>
+      <!-- Post data -->
+      <p>by <a><strong>Carine Fox</strong></a>, 14/08/2018</p>
+      <!-- Read more button -->
+      <a mdbBtn color="pink" mdbWavesEffect class="mb-lg-0 mb-4">Read more</a>
+
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-lg-5">
+
+      <!-- Featured image -->
+      <div class="view overlay rounded z-depth-2 waves-light" mdbWavesEffect>
+        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/img%20(34).jpg" alt="Sample image">
+        <a>
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+
+    </div>
+    <!-- Grid column -->
+
+  </div>
+  <!-- Grid row -->
+
+  <hr class="my-5">
+
+  <!-- Grid row -->
+  <div class="row">
+
+    <!-- Grid column -->
+    <div class="col-lg-5">
+
+      <!-- Featured image -->
+      <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4 waves-light" mdbWavesEffect>
+        <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/img (28).jpg" alt="Sample image">
+        <a>
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-lg-7">
+
+      <!-- Category -->
+      <a href="#!" class="indigo-text">
+        <h6 class="font-weight-bold mb-3"><mdb-icon fas icon="suitcase" class="pr-2"></mdb-icon>Travels</h6>
+      </a>
+      <!-- Post title -->
+      <h3 class="font-weight-bold mb-3"><strong>Title of the news</strong></h3>
+      <!-- Excerpt -->
+      <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
+        magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro qui dolorem ipsum quia sit amet.</p>
+      <!-- Post data -->
+      <p>by <a><strong>Carine Fox</strong></a>, 11/08/2018</p>
+      <!-- Read more button -->
+      <a mdbBtn color="indigo" mdbWavesEffect>Read more</a>
+
+    </div>
+    <!-- Grid column -->
+
+  </div>
+  <!-- Grid row -->
+
+</section>
+<!-- Section: Blog v.1 -->
 
 
